<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:facebook="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center" android:orientation="vertical"
android:id="@+id/lnrRoot">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/speed_vts_logo"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/dp_10"
                  android:background="@android:color/darker_gray"
                  android:orientation="vertical"
                  android:padding="@dimen/dp_10">


        <EditText android:id="@+id/txtMobileNumber"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="@dimen/dp_10"
                  android:background="@android:color/white"
                  android:hint="@string/email_or_mobile"
                  android:maxLines="1"
                  android:padding="@dimen/dp_10"
                  android:textColor="@android:color/black"
                  android:textColorHint="@android:color/darker_gray"
                  android:textSize="@dimen/normal_text"/>


        <EditText android:id="@+id/txtPassword"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="@dimen/dp_10"
                  android:background="@android:color/white"
                  android:hint="@string/password"
                  android:maxLines="1"
                  android:padding="@dimen/dp_10"
                  android:password="true"
                  android:textColor="@android:color/black"
                  android:textColorHint="@android:color/darker_gray"
                  android:textSize="@dimen/normal_text"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/button_bg"
            android:padding="@dimen/dp_10"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"/>
    </LinearLayout>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginLeft="@dimen/dp_5"
              android:layout_marginRight="@dimen/dp_5"
              android:layout_marginTop="@dimen/dp_10"
              android:text="@string/forgot_password"
              android:textColor="@android:color/black"
              android:textSize="@dimen/normal_text"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/dp_10"
                  android:orientation="horizontal">
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:layout_gravity="center"
              android:layout_weight="1"
              android:background="@android:color/black"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/dp_5"
                  android:layout_marginRight="@dimen/dp_5"
                  android:text="@string/or"
                  android:textColor="@android:color/black"
                  android:textSize="@dimen/normal_text"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:layout_gravity="center"
              android:layout_weight="1"
              android:background="@android:color/black"/>
    </LinearLayout>


</LinearLayout>