<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:facebook="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/dp_10"
                  android:background="@android:color/darker_gray"
                  android:orientation="vertical"
                  android:padding="@dimen/dp_10">


        <EditText android:id="@+id/txtCurrentPassword"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="@dimen/dp_10"
                  android:background="@android:color/white"
                  android:hint="@string/current_password"
                  android:maxLines="1"
                  android:padding="@dimen/dp_10"
                  android:password="true"
                  android:textColor="@android:color/black"
                  android:textColorHint="@android:color/darker_gray"
                  android:textSize="@dimen/normal_text"/>


        <EditText android:id="@+id/txtNewPassword"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="@dimen/dp_10"
                  android:background="@android:color/white"
                  android:hint="@string/new_password"
                  android:maxLines="1"
                  android:padding="@dimen/dp_10"
                  android:password="true"
                  android:textColor="@android:color/black"
                  android:textColorHint="@android:color/darker_gray"
                  android:textSize="@dimen/normal_text"/>

        <EditText android:id="@+id/txtConfirmPassword"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_margin="@dimen/dp_10"
                  android:background="@android:color/white"
                  android:hint="@string/confirm_password"
                  android:maxLines="1"
                  android:padding="@dimen/dp_10"
                  android:password="true"
                  android:textColor="@android:color/black"
                  android:textColorHint="@android:color/darker_gray"
                  android:textSize="@dimen/normal_text"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@drawable/button_bg"
            android:padding="@dimen/dp_10"
            android:text="@string/change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold"/>
    </LinearLayout>



</LinearLayout>