<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/lnrRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            tools:text="Geofence Name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="@dimen/Width.Label"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radius"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="@dimen/Width.Label"
                android:layout_height="wrap_content"
                android:text="@string/radius"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

            <TextView
                android:id="@+id/lblRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radius"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/Width.Label"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/small_text"/>

                <TextView
                    android:id="@+id/lblLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/small_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/Width.Label"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/small_text"/>

                <TextView
                    android:id="@+id/lblLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/small_text"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="@dimen/dp_10">

            <TextView
                android:layout_width="@dimen/Width.Label"
                android:layout_height="wrap_content"
                android:text="Country"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

            <TextView
                android:id="@+id/lblCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="country"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="@dimen/Width.Label"
                android:layout_height="wrap_content"
                android:text="Locality"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

            <TextView
                android:id="@+id/lblLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="locality"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="@dimen/Width.Label"
                android:layout_height="wrap_content"
                android:text="Admin area"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

            <TextView
                android:id="@+id/lblAdminArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="admin area"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:padding="@dimen/dp_5">

            <TextView
                android:layout_width="@dimen/Width.Label"
                android:layout_height="wrap_content"
                android:text="Sub Locality"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

            <TextView
                android:id="@+id/lblSubLocality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sub Locality"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>
